@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-02-09T08:18:20Z",
-  "count_outdated" : 6597,
-  "uniques_outdated" : 2566,
-  "count" : 6800,
+  "timestamp" : "2024-02-09T16:19:08Z",
+  "count_outdated" : 6599,
+  "uniques_outdated" : 2567,
+  "count" : 6801,
   "uniques" : 2717,
   "clones" : [
-    {
-      "timestamp": "2024-01-26T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-01-27T00:00:00Z",
       "count": 2,
@@ -133,9 +124,9 @@
     },
     {
       "timestamp": "2024-02-09T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
